/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    jcenter()
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
}

version = "0.3.0"
archivesBaseName = "ForgeMods"



dependencies {
    compile "org.json:json:20190722"
    compile 'info.picocli:picocli:4.2.0'
    compile 'org.tomlj:tomlj:1.0.0'
    // annotationProcessor 'info.picocli:picocli-codegen:4.2.0'

    // Use JUnit Jupiter API for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.1'

    // Use JUnit Jupiter Engine for testing.
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.5.1'
}

compileJava {
    // options.compilerArgs += ["-Aproject=${project.name}"]
}

application {
    // Define the main class for the application.
    mainClassName = 'McForgeMods.ForgeMods'
}

jar {
    manifest {
        attributes (
            'Main-Class': application.mainClassName
        )
    }
}

test {
    // Use junit platform for unit tests
    useJUnitPlatform()
}


task fatJar(type: Jar, group: "build") {
    manifest {
        attributes (
                'Main-Class': application.mainClassName
        )
    }
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}